# IIR-Robotics

./: .gitignore  README.md  database.py  resnet18_mel_spec.ipynb
IIR_legged_real/: CMakeLists.txt  package.xml
IIR_legged_real/launch/: real.launch
IIR_legged_real/src/exe/: ros_udp_wifi.cpp  voice_command.cpp
IIR_ros_Alisa/: CMakeLists.txt  package.xml
IIR_ros_Alisa/scripts/: Alisa_pub.py
ISR_ros_vosk/: CMakeLists.txt  package.xml
ISR_ros_vosk/scripts/: vosk_pub.py
Ros_scripts/: CMakeLists.txt  body.cpp  body.h  dance.cpp  servo.cpp  voice_command.cpp
Ros_scripts/Alisa/: CMakeLists.txt  package.xml
Ros_scripts/Alisa/scripts/: Alica_pub.py
alice sripts/: parrot.py  requirements.txt
